# trainerd

./: .gitignore  MANIFEST.in  README.md  __init__.py  cli.py  config.py  contracts.py  pyproject.toml  runner.py  server.py  storage.py
.github/workflows/: ci.yml  codeql.yml  release.yml
examples/: .trainerd.yaml  artifact_manifest.example.json  hello_job.py  project_a_config.yaml  project_b_config.yaml  projects_config.yaml  python_job_config.yaml  sleep_job.py  sleep_job_config.yaml
src/trainerd/: __init__.py  __main__.py  cli.py  config.py  contracts.py  lan.py  managed_env.py  runner.py  server.py  storage.py
tests/: test_managed_env.py  test_trainerd_contracts.py  test_trainerd_lan.py  test_trainerd_projects.py  test_trainerd_queue_safety.py  test_trainerd_runner.py
